--- a/main.css
+++ b/main.css
@@ -1,13 +1,16 @@
 body {
   background-color: rgb(80, 80, 80);
-  display: block;
 }
 
 .button {
-  width: 200px;
+  width: 100%;
 }
 
 .column {
+}
+
+.row {
+  white-space: normal;
 }
 
 .special {
