--- a/main.css
+++ b/main.css
@@ -1,6 +1,5 @@
 body {
   padding: 50px;
-  background-color: rgb(80, 80, 80);
   display: block;
 }
 
@@ -8,6 +7,9 @@ body {
   width: 100%;
 }
 
+.row {
+  padding: 1rem 1em !important; 
+}
 
 
 .special {
@@ -15,6 +17,5 @@ body {
 }
 
 #vueapp {
-  color: rgb(28, 28, 28);
 
 }
