--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,10 @@ h1 {
 .title-bar {
   -webkit-app-region: drag;
   height: 32px;
+  width: -webkit-calc(100% - 110px);
+  width:    -moz-calc(100% - 110px);
+  width:      -o-calc(100% - 110px);
+  width:         calc(100% - 110px);
   padding: none !important;
   margin: 0px !important;
 }
@@ -76,9 +80,11 @@ h1 {
   top: 0px;
   right: 6px;
   z-index: 2;
+  width: 110px;
 }
 
 .title-bar-btns button {
+  -webkit-app-region: no-drag;
   height: 32px;
   width: 32px;
   background-color: transparent;
@@ -89,7 +95,7 @@ h1 {
 }
 
 .title-bar-btns button:hover {
-  /* background-color: #616165; */
+  -webkit-app-region: no-drag;
   color: #B58900;
 }
 
