--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,11 @@ body {
   font-family: "Nunito Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
-input {
+input,
+.custom-select {
   font-family: monospace;
 }
+
 
 
 h1 {
@@ -82,6 +84,9 @@ h1 {
   z-index: 2;
   width: 110px;
 }
+.title-bar-btns button:focus {
+  outline: none;
+}
 
 .title-bar-btns button {
   -webkit-app-region: no-drag;
@@ -137,12 +142,34 @@ h1 {
   background-color: #B58900;
 }
 
+/*
+*/
 .form-control {
   border-radius: 0.5rem;
+  color: rgb(7, 11, 22);
 }
 
 .form-control:focus {
   border-color: #B58900;
-  border-width: thick;
+  border-width: 2px !important;
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
+}
+
+.custom-select {
+  border-radius: 0.5rem;
+  font-size: 16px;
+  color: rgb(7, 11, 22);
+}
+
+.custom-select:focus {
+  border-color: #B58900;
+  border-width: 2px !important;
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
+}
+
+.pool-help-text {
+  color: #284346 !important;
+}
+.help-text {
+  color: #6c979c !important;
 }
